# Data_Structures_Implemetation

./: .gitignore  .travis.yml  CMakeLists.txt  README.MD  README.md  StackAndQueue.sln  info.txt  main.c  Очередь на debug.sln
Debug/: StackAndQueue.ilk
Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Source.cpp  Steck.cpp  Steck.h
StackAndQueue/: StackAndQueue.vcxproj  StackAndQueue.vcxproj.filters  main.c  stack.c  stack.h  tests.c  tests.h
StackAndQueue/Debug/: vc142.idb
StackAndQueue/Debug/StackAndQueue.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StackAndQueue.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/Modules/: AddCMockaTest.cmake  AddMockedTest.cmake  setflags.cmake
cmocka/: CMakeLists.txt
functions/: queue.c  stack.c  tests.c
headers/: queue.h  stack.h  tests.h
includes/: common.h  error.h  premain.h  queue.h  stack.h
sources/: common.c  error.c  queue.c  stack.c
tests/: CMakeLists.txt  all_tests.c  test_queue.c
